# tg-forwarder

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  generate_session_string.py  main.py  requirements.txt  setup.cfg
telegram_forwarder/: __init__.py
telegram_forwarder/src/: bot.py  client.py  config.py  database.py  download.py  handlers.py  parsers.py  utils.py
