[metadata]
name=telegram-forwarder
version=0.1.0
description=forward media from a telegram group to another
author=Kamuri Amorim
author_email=myk.gata14@gmail.com
long_description= file: README.md
long_description_content_type=text/markdown
url=
keywords=python telegram forward
license=MIT
[options]
zip_safe = False
packages =
    telegram_forwarder
install_requires =
    aiogram
    Pyrogram
    TgCrypto

